--- a/projects/GenDmgCore/GenDmgCore.vcxproj.filters
+++ b/projects/GenDmgCore/GenDmgCore.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClInclude Include="..\..\include\GenDmgCore\LuaEngine.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\GenDmgCore\CharacterConfig.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\GenDmgCore\GenDmgCore.cpp">
@@ -270,6 +273,9 @@
       <Filter>源文件\lua</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\GenDmgCore\LuaEngine.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\GenDmgCore\CharacterConfig.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
